--- a/index.html
+++ b/index.html
@@ -81,13 +81,14 @@
         <div class="card wind-status">
           <h3>Wind Status</h3>
           <canvas id="windChart"></canvas>
-          <p class="wind-speed">7.50 km/h</p>
+          <p class="wind-speed"></p>
         </div>
 
         <div class="card uv-index">
           <h3>UV Index</h3>
           <canvas id="uvChart"></canvas>
-          <p class="uv-value">5.50 uv</p>
+          <p class="uv-value"></p>
+          <small class="uv-subtext"></small>
         </div>
         
         <div class="card sunrise-sunset"><h3>Sunrise and Sunset</h3>
@@ -109,13 +110,13 @@
 
         <div class="card visibility">
           <h3>Visibility</h3>
-          <p>04km</p>
-          <small>Haze is affecting visibility</small>
+          <p class="visibility-value">04km</p>
+          <small>Haze affects visibility</small>
         </div>
 
         <div class="card feels-like">
           <h3>Feels like</h3>
-          <p>42°</p>
+          <p class="feel">42°</p>
           <small>Humidity is making it feel hotter</small>
         </div>
 
